# ChangeLog for net-libs/obby
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/obby/ChangeLog,v 1.25 2008/11/07 19:02:18 humpback Exp $

*obby-0.4.6 (07 Nov 2008)

  07 Nov 2008; Gustavo Felisberto <humpback@gentoo.org> +obby-0.4.6.ebuild:
  Bump.

*obby-0.4.5 (27 Jul 2008)

  27 Jul 2008; Peter Alfredsen <loki_val@gentoo.org> +obby-0.4.5.ebuild:
  Bump wrt bug #222845

  19 May 2008; Jeroen Roovers <jer@gentoo.org> obby-0.4.4.ebuild:
  Marked ~hppa.

  05 Nov 2007; Gustavo Felisberto <humpback@gentoo.org>
  -files/dual_subscribe.patch, -obby-0.3.0-r1.ebuild:
  Removing older version that is blocking bug #183776

  04 Nov 2007; Lars Weiler <pylon@gentoo.org> obby-0.4.4.ebuild:
  stable ppc, bug #197438

  18 Oct 2007; Christoph Mende <angelos@gentoo.org> obby-0.4.4.ebuild:
  Stable on amd64 wrt bug #196034

  16 Oct 2007; Dawid Węgliński <cla@gentoo.org> obby-0.4.4.ebuild:
  Stable on x86 (bug #196034)

*obby-0.4.4 (18 Aug 2007)

  18 Aug 2007; Tiziano Müller <dev-zero@gentoo.org> -obby-0.4.1.ebuild,
  +obby-0.4.4.ebuild:
  Version bump (bug #171089), dropped old versions.

  28 Oct 2006; Matti Bickel <mabi@gentoo.org> obby-0.3.0-r1.ebuild:
  Stable on ppc (bug #115113)

*obby-0.4.1 (29 Aug 2006)

  29 Aug 2006; Gustavo Felisberto <humpback@gentoo.org>; -obby-0.2.0.ebuild,
  -obby-0.2.1.ebuild, -obby-0.3.0.ebuild, -obby-0.4.0_rc4.ebuild,
  +obby-0.4.1.ebuild:
  Removed old version and added new version that will be announced tomorow.

*obby-0.4.0_rc4 (29 Aug 2006)

  29 Aug 2006; Gustavo Felisberto <humpback@gentoo.org>;
  -obby-0.4.0_rc2.ebuild, +obby-0.4.0_rc4.ebuild:
  Bumped to rc4 that will be used by gobby-0.4.0rc4

*obby-0.4.0_rc2 (12 Jun 2006)

  12 Jun 2006; Gustavo Felisberto <humpback@gentoo.org>;
  +obby-0.4.0_rc2.ebuild:
  Added masked 0.4.0_rc2 that is needed by gobby 0.4.0_rc2. This packge will
  not unmasked and should only be used by people wanting to help upstream
  developers.
