@@ -3,6 +3,6 @@ DIST obby-0.4.5.tar.gz 505446 RMD160 1d132308a825a82d6a59c2c71c399031fb17465e SH
 DIST obby-0.4.6.tar.gz 511452 RMD160 08d82dcf799d8c19d40de02369f55d4108c57a39 SHA1 9a1258dad0da8223f517381715781cd113fca36c SHA256 9660a80fef62e0ff71c706992bacc503efecdfa6be58297dd72da672bb8ca2ce
 EBUILD obby-0.4.4.ebuild 810 RMD160 71ad6f4844c6b7eeb80fb2bb2e028a025a127bed SHA1 fc50c0e3703d4d4f2e82ca1063280a05f0b2dd38 SHA256 575943c670665c6ca4f129ed480a843d30431e569599bda251d35cac80800b92
 EBUILD obby-0.4.5.ebuild 818 RMD160 883b1243a39ce64612c5ce5825d970ed5211cdd9 SHA1 7ac1a09287f98f432d93c313945661e37ec2f516 SHA256 653f422adfddf53d6506594ef5e6460dd3864aad0472f5d5dd891f4cca9826d8
-EBUILD obby-0.4.6.ebuild 818 RMD160 988f783b37a17bf2273a78eb1f402f9e627540a5 SHA1 5e7ba1b3ff2d539bb3cf83a0974ba878a4295f37 SHA256 caef66cc54de7c73456f34779df66a30d0cc106ba870c41a47f1c6b5cc8fd72d
-MISC ChangeLog 3808 RMD160 f510b73073bad4496ead6f0ab1a3beef5b8fcabb SHA1 26a339df2eb7df528e6ed8ad2bc598358adb805f SHA256 23b0dfdbcfc4e293ff7ccdbbed804f67de73f36f7156c1be9debfb98eacf0204
+EBUILD obby-0.4.6-r1.ebuild 850 RMD160 d572dbce77c36b4a782f7b9d8c426502370a95dd SHA1 5914d92f73f02c5b9882ab8bfb734b17c717f680 SHA256 4efeb57ab5308cbc29e13346013e47d64c336ec3309db1110975d6d26f56fc4b
+MISC ChangeLog 4010 RMD160 54f2b8562fb3058f6143a07575ba8aaa7bf2f292 SHA1 96e19f0bc29f909cc5eed1741efa651674bc907b SHA256 ebc5b25c1050f89b9e965b8df70dc62672ff46aa387b65672f95b3095eecc583
 MISC metadata.xml 355 RMD160 d6ff3f30208adcd5a50c57f33bd51d38d9f05680 SHA1 784ef39653430c6693ee559f48b9a9327d80ff25 SHA256 64e282cf9ee25400112c2e4356928a98250d92efe740362239304e861512004d
