@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/obby
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/obby/ChangeLog,v 1.25 2008/11/07 19:02:18 humpback Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/obby/ChangeLog,v 1.26 2008/11/07 21:15:47 humpback Exp $
+
+*obby-0.4.6-r1 (07 Nov 2008)
+
+  07 Nov 2008; Gustavo Felisberto <humpback@gentoo.org> -obby-0.4.6.ebuild,
+  +obby-0.4.6-r1.ebuild:
+  Added nls use flag. Credit goes to Daniel Pielmeier in bug #243442.
 
 *obby-0.4.6 (07 Nov 2008)
 
